# youtube-shorts-gen

./: .gitignore  README.md  profiles.yaml  pyproject.toml  yt-shorts-gen.py
profiles.d/: capital-cities.yaml  dummy.yaml  famous-battles.yaml
